[package]
name = "libpetetpl"
version = "0.1.0"
authors = ["Sergei Beljakov <1899416+tasmanianfox@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["dylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.79"
pete-core = {"git" = "https://github.com/pete-tpl/pete-core.git", "version" = "0.1.0"}